--- a/etc/config.yaml
+++ b/etc/config.yaml
@@ -9,6 +9,10 @@ app:
   read_weight: 1
   write_weight: 1
 
+load_balance:
+  name: "read_write_weight"
+  timeout: 1000 # millisecond
+
 db:
   base:
     dsn: "jrmarcco:<passwd>@tcp(192.168.3.3:3306)/jotify_0?charset=utf8mb4&collation=utf8mb4_general_ci&parseTime=True&loc=Local&timeout=1s&readTimeout=3s&writeTimeout=3s&multiStatements=true&interpolateParams=true"
